# IG_2017

./: .gitignore  BRDF_phong.h  BoundingVolumeHierarchy.h  CMakeLists.txt  Camara.h  Cambio_Base.h  Cambio_Base_Inversa.h  Conexion.h  Esfera.h  Luz.h  Malla_geometrias.h  Matriz.h  Path_tracer.h  Pixel.h  Plano_proyeccion.h  Punto.h  Punto_Superficie.h  README.md  RGB.h  Ray_tracer.h  Ray_tracing.h  Tupla.h  Vector.h  main.cpp
Geometria/: Cambio_Base_Inversa.h  Conexion.h  Esfera.h  Geometria.h  Malla_geometrias.h  Matriz_transformacion.h  Plano.h  Punto.h  Punto_Superficie.h  Triangulo.h  Tupla.h  Vector.h
